--- a/_docs/5-examples.html
+++ b/_docs/5-examples.html
@@ -148,8 +148,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./0-Card.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">0-Card.html</span></a>
+  <a href="./0-card.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Card component for displaying chat messages</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -186,6 +186,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <div class="sidebar-item-container"> 
   <a href="./5-examples.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text">ChatApp Examples</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./6-jupyterexample.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Find process using port 5001</span></a>
   </div>
 </li>
     </ul>
