--- a/_docs/index.html
+++ b/_docs/index.html
@@ -148,8 +148,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./0-Card.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">0-Card.html</span></a>
+  <a href="./0-card.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Card component for displaying chat messages</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -186,6 +186,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <div class="sidebar-item-container"> 
   <a href="./5-examples.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">ChatApp Examples</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./6-jupyterexample.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Find process using port 5001</span></a>
   </div>
 </li>
     </ul>
@@ -464,14 +470,15 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <ol type="1">
 <li><p>Read through the notebooks in order:</p>
 <ul>
-<li><code>2-Session.ipynb</code> - Understand state management</li>
-<li><code>3-Service.ipynb</code> - Learn business logic layer</li>
-<li><code>4-Renderer.ipynb</code> - Explore presentation layer</li>
-<li><code>5-ChatApp.ipynb</code> - See full integration</li>
-<li><code>6-Examples.ipynb</code> - Working examples</li>
+<li><code>1-Session.ipynb</code> - Understand state management</li>
+<li><code>2-Service.ipynb</code> - Learn business logic layer</li>
+<li><code>3-Renderer.ipynb</code> - Explore presentation layer</li>
+<li><code>4-ChatApp.ipynb</code> - See full integration</li>
+<li><code>5-Examples.ipynb</code> - Working examples</li>
+<li><code>6-JupyterExample.ipynb</code> - Jupyter integration</li>
 </ul></li>
-<li><p>Try the examples in <code>6-Examples.ipynb</code></p></li>
-<li><p>Build your own custom responder</p></li>
+<li><p>Try the examples in <code>5-Examples.ipynb</code></p></li>
+<li><p>Build your own custom responder and test it out in <code>6-JupyterExample.ipynb</code></p></li>
 <li><p>Deploy to production with your preferred hosting</p></li>
 </ol>
 </section>
